# Stock_Selection_Fundamental

./: .gitignore  README.md  pyproject.toml
configs/backtests/: cn_top30.yaml  hk_top20.yaml
configs/experiments/: fundamental_grid.yaml  smoke.yaml
configs/markets/: cn.yaml  hk.yaml
configs/risk/: default_risk_limits.yaml
configs/strategies/: fundamental_v1.yaml  quality_growth.yaml
hk_stock_quant/: __init__.py  backtest.py  cli.py  config.py  demo_data.py  factors.py  reporting.py  strategy.py  types.py  universe.py
hk_stock_quant/data/: __init__.py  akshare_cn.py  akshare_hk.py  local_csv.py  provider.py
notebooks/: factor_research.ipynb  portfolio_review.ipynb
scripts/: check_baseline.py  freeze_baseline.py  generate_sample_data.py  prepare_curated.py  run_backtest.py  run_experiment.py  sync_cn.py  sync_hk.py
stock_selection_fundamental/: __init__.py  cli.py  config.py  runtime.py  types.py
stock_selection_fundamental/backtest/: broker.py  calendar.py  cost_model.py  engine.py  performance.py
stock_selection_fundamental/factors/: __init__.py  base.py  cashflow.py  growth.py  leverage.py  profitability.py  registry.py  transforms.py
stock_selection_fundamental/portfolio/: __init__.py  constraints.py  construction.py  optimization.py  turnover.py
stock_selection_fundamental/providers/: __init__.py  akshare_cn.py  akshare_hk.py  base.py  curation.py  local_csv.py  mapping.py  sync_utils.py
tests/: test_akshare_cn.py  test_akshare_hk.py  test_backtest.py  test_factors.py  test_local_csv_provider.py  test_runtime.py
tests/risk/: __init__.py  (+1 more)
(+44 files in other folders)
