[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-selection-fundamental"
version = "0.2.0"
description = "Config-driven HK/CN fundamental stock selection and backtesting research framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.16",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["hk_stock_quant*", "stock_selection_fundamental*"]
